...
    <string name="save">Save</string>
    <string name="shop_name">Shop Name</string>
    <string name="add_location">Add Shop</string>
    <string name="edit_product">Edit Product</string>
    <string name="pin_shop">Pin Shop to Drawer</string>
    <string name="show_unmapped_products">Show Products in the \'No Aisle\' section</string>
    <string name="add_aisle">Add Aisle</string>
    <string name="new_aisle">New Aisle</string>
    <string name="add_another">Add Another</string>
    <string name="aisle_name">Aisle Name</string>
    <string name="id_label" translatable="false">id</string>
    <string name="done">Done</string>
    <string name="search_product_hint">Search Products…</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_confirmation">Delete %1$s?</string>
    <string name="edit_aisle">Edit Aisle</string>
    <string name="edit_location">Edit Shop</string>
...
    <string name="decrement">Decrement</string>
    <string name="increment">Increment</string>
    <string name="qty">Qty</string>
    <string name="expand_collapse_aisles">Expand/collapse aisles</string>
    <string name="extra_options">Extra options</string>
    <string name="tab_notes">Notes</string>
    <string name="product_tab_aisles">Aisles</string>
    <string name="product_tab_barcodes">Barcodes</string>
    <string name="product_tab_inventory">Inventory</string>
    <string name="notes_hint">Enter notes here…</string>
    <string name="show_note">Show note</string>
    <string name="note_dialog_title">Note for %1$s</string>
    <string name="loading">Loading…</string>
...
